@@ -119,6 +119,7 @@ Config::Config(int argc, const char **argv)
 		("min-score", 0, "minimum bit score to report alignments (overrides e-value setting)", min_bit_score)
 		("id", 0, "minimum identity% to report an alignment", min_id)
 		("query-cover", 0, "minimum query cover% to report an alignment", query_cover)
+		("subject-cover", 0, "minimum subject cover% to report an alignment", subject_cover)
 		("sensitive", 0, "enable sensitive mode (default: fast)", mode_sensitive)
 		("more-sensitive", 0, "enable more sensitive mode (default: fast)", mode_more_sensitive)
 		("block-size", 'b', "sequence block size in billions of letters (default=2.0)", chunk_size, 2.0)
